# Egalvanic_Web-main

./: .classpath  .gitignore  .project  ASSUMPTIONS.md  BUGS.md  CLAUDE-CODE-CHAT.md  CLAUDE.md  EGALVANIC_PROJECT_KNOWLEDGE.md  IOS_LAUNCH_TEST_README.md  README.md  SUMMARY.md  WEBSITE_BUG_REPORT.md  bughunt-testng.xml  classpath.txt  deep-bug-verification-testng.xml  email-test-quick.xml  fail-task-full.xml  fail-task-quick.xml  fail.xml  fullsuite-testng.xml  pom.xml  run-ios-test.bat  run-ios-test.ps1  security-audit-testng.xml  smoke-api-testng.xml  smoke-asset-testng.xml  smoke-auth-full-testng.xml  smoke-auth-testng.xml  smoke-bces-iq-testng.xml  smoke-connection-testng.xml  smoke-critical-testng.xml  smoke-issues-testng.xml  smoke-location-testng.xml  smoke-site-testng.xml  smoke-testng.xml  smoke-workorder-testng.xml  suite-accounts.xml  suite-admin-pm.xml  suite-ai-analyzer.xml  suite-ai-form.xml  (+62 more)
docs/sld-intelligence/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
docs/sld-intelligence/docs/: PROJECT_RULES.md  architecture.md
docs/sld-intelligence/scripts/: benchmark_all.py
docs/sld-intelligence/src/: compare.py  pipeline.py  site.py
docs/sld-intelligence/src/cli/: commands.py  main.py
docs/sld-intelligence/src/export/: xlsx_export.py
docs/sld-intelligence/src/graph/: spatial_match.py
docs/sld-intelligence/src/models/: schema.py
docs/sld-intelligence/src/pdf/: procore_zip.py  renderer.py  triage.py  vector_extract.py
docs/sld-intelligence/src/rules/: __init__.py  chains.py  classes.py  fuses.py  naming.py
(+1297 files in other folders)
