[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sld-intelligence"
version = "0.1.0"
description = "Extract structured asset data from electrical Single-Line Diagram PDFs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abhiyant Singh" },
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "pydantic>=2.5.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7.0"]
ai = ["anthropic>=0.34.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
sld-intel = "src.cli.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "notebooks*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true
